--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>Tarea1 Maven Webapp</name>
+  <name>Tarea Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
